--- a/about.html
+++ b/about.html
@@ -27,10 +27,11 @@
         <section class="about">
             <div class="main">
                 <img src="images/harendra.JPG" alt="Harendra singh">
+                
                 <div class="about-text">
                     <h2>About me</h2>
                     <h5>Engineer <span id="red">& Content Creator</span></h5>
-                    <p>The “about us” page is a must-have page (this can be a page on your website, separate landing page or even “about me” website as a type of portfolio) used by all types of businesses to give customers more insight into who is involved with a given business and exactly what it does.Your “About me” page forms the first impression of a company or product, puts a name and a face to your business, and gives website visitor the opportunity to develop a connection with you (a good reason for a visitor to stay on your website!), and it is your best chance to convert more visits to enquiries/more enquiries to customers.</p>
+                    <p>Hi! My name is Harendra singh. I'm very dedicated and hardworking person who always thrives to work on end to end products. With my experience and knowlege I acquire many skills and make many successful projects. I enjoyed every step of creation , learning , development and collaboration.</p>
                     <a href="https://www.instagram.com/harendra_singh_yt/"><button type="button">Let's Talk</button></a>
                     
                 </div>
