--- a/index.html
+++ b/index.html
@@ -26,10 +26,15 @@
                 <a href="https://www.youtube.com/biographyinhindi" class="btn" target="_blank">Subscribe</a>
             </nav>
         </div>
-        <video class = "video"controls="controls"/>   
-            <source src="images/india.mp4" type="video/mp4"> 
-         </video> 
-
+        <div class="video">
+          <a href="https://www.youtube.com/watch?v=tUfyrd-BqMA&t=6s"><img class="video1" src="images/happu.jpg" alt="logo"></a>
+          <a href="https://www.youtube.com/watch?v=KLz7Y3rWgpA"><img class="video2" src="images/pankaj.jpg" alt="logo"></a>
+          <div class="videop2">
+            <a href="https://www.youtube.com/watch?v=Z_872xxJ5j8"><img class="video3" src="images/stephen.jpg" alt="logo"></a>
+           <a href="https://www.youtube.com/watch?v=WYtwY0wiNoA"><img class="video4" src="images/dhoni.jpg" alt="logo"></a>
+          </div>
+          
+       </div>
         <div class="content">
             <h4>Hello, My name is</h4>
             <h1>Harendra singh</h1>
@@ -41,6 +46,5 @@
                 </form>
             </div>
         </div>
-      
     </body>
 </html>
