--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>channel website</title>
+        <title>Bio in hindi</title>
 
         <link rel="stylesheet" href="style.css">
 
