--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
         </div>
         <section class="about">
             <div class="main">
-                <img src="images/harendra.JPG" alt="Harendra singh">
+                <img src="images/harendra-min.JPG" alt="Harendra singh">
                 
                 <div class="about-text">
                     <h2>About me</h2>
