--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+            <link rel="shortcut icon" href="https://yt3.ggpht.com/ytc/AMLnZu8m9Q8nFUl0cIzppc8cmkRYHc7-TBKZd_8CRZyHCg=s176-c-k-c0x00ffffff-no-rj" type="image/x-icon">
         <title>Bio in hindi</title>
 
         <link rel="stylesheet" href="style.css">
